crates/crucible-query/src/render/snapshots/crucible_query__render__sqlite__tests__select_all.snap
---
source: crates/crucible-query/src/render/sqlite.rs
expression: result.sql
---
SELECT * FROM notes
